WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
23567
svg/custom/stop-crash.svg test is crashing
https://bugs.webkit.org/show_bug.cgi?id=23567
Summary
svg/custom/stop-crash.svg test is crashing
Simon Fraser (smfr)
Reported
2009-01-27 00:02:33 PST
I broke svg/custom/stop-crash.svg in
r40288
. I'll fix it.
Attachments
Patch
(4.36 KB, patch)
2009-01-27 13:26 PST
,
Simon Fraser (smfr)
simon.fraser
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Simon Fraser (smfr)
Comment 1
2009-01-27 00:03:34 PST
It's recusing in RenderSVGRoot::clippedOverflowRectForRepaint/RenderObject::clippedOverflowRectForRepaint()
Simon Fraser (smfr)
Comment 2
2009-01-27 13:26:24 PST
Created
attachment 27083
[details]
Patch
Simon Fraser (smfr)
Comment 3
2009-01-27 13:26:52 PST
Comment on
attachment 27083
[details]
Patch Got rs=hyatt on irc.
Simon Fraser (smfr)
Comment 4
2009-01-27 13:28:27 PST
Committing to
http://svn.webkit.org/repository/webkit/trunk
... M WebCore/ChangeLog M WebCore/rendering/RenderSVGGradientStop.h M WebCore/rendering/RenderSVGImage.cpp M WebCore/rendering/RenderTableCol.cpp M WebCore/rendering/RenderTableRow.cpp Committed
r40298
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug