2009-01-27  Simon Fraser  <simon.fraser@apple.com>

Reviewed by Dave Hyatt

        https://bugs.webkit.org/show_bug.cgi?id=23567

        Fix crash of svg/custom/stop-crash.svg testcase because of
        infinite recursion, as I missed replacing absoluteClippedOverflowRect()
        with clippedOverflowRectForRepaint() in RenderSVGGradientStop.

        Also fix a missed conversion in RenderTableCol, and add a couple
        of comments.

Canonical link: https://commits.webkit.org/32486@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@40298 268f45cc-cd09-0410-ab3c-d52691b4dbfc