WebCore/rendering/RenderSVGImage.cpp
@@ -228,7 +228,7 @@ void RenderSVGImage::imageChanged(WrappedImagePtr image, const IntRect* rect)
     RenderImage::imageChanged(image, rect);
 
     // We override to invalidate a larger rect, since SVG images can draw outside their "bounds"
-    repaintRectangle(absoluteClippedOverflowRect());
+    repaintRectangle(absoluteClippedOverflowRect());    // FIXME: Isn't this just repaint()?
 }
 
 void RenderSVGImage::calculateAbsoluteBounds()
